--- a/MaxMsp/README
+++ b/MaxMsp/README
@@ -1,1 +1,1 @@
-Max is a visual programming language I use for my creative practices including sound and physical computing. These are some of the patches I've built or repurposed.
+Max is a visual programming language I use for my creative practices including sound, visuals, and physical computing. These are some of the patches I've built or repurposed.
